--- a/docker/local/docker-compose.yaml
+++ b/docker/local/docker-compose.yaml
@@ -14,13 +14,13 @@ services:
 
     # mount our navigation code
     volumes:
-      - ${HOME}/Eurobot-2026-Navigation2:/home/user/Eurobot-2025-Navigation2-ws # TODO: Check for working directories
+      - ../..:/home/user/Eurobot-2026-Navigation2-ws # TODO: Check for working directories
       - /tmp/.X11-unix:/tmp/.X11-unix
       - $HOME/.Xauthority:/home/user/.Xauthority
       - /dev:/dev
 
     working_dir:
-      /home/user/Eurobot-2025-Navigation2-ws
+      /home/user/Eurobot-2026-Navigation2-ws
 
     environment:
       - DISPLAY=${DISPLAY}  # Set display environment variable
