create persistent_sequence_w_cont_on_fail and reset_recovery to eliminate force_success

--- a/src/navigation2_run/params/nav2_params_default.yaml
+++ b/src/navigation2_run/params/nav2_params_default.yaml
@@ -15,6 +15,7 @@ bt_navigator:
     default_nav_to_pose_bt_xml: "$(find-pkg-share custom_nav_to_pose)/behavior_trees/navigate_to_pose_w_selector.xml"
     plugin_lib_names:
       - nav2_stop_controller_bt_node
+      - nav2_reset_recovery_bt_node
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_compute_path_through_poses_action_bt_node
       - nav2_smooth_path_action_bt_node
@@ -43,6 +44,8 @@ bt_navigator:
       - nav2_recovery_node_bt_node
       - nav2_pipeline_sequence_bt_node
       - nav2_round_robin_node_bt_node
+      - nav2_persistent_sequence_bt_node
+      - nav2_persistent_sequence_w_cont_on_fail_bt_node
       - nav2_transform_available_condition_bt_node
       - nav2_time_expired_condition_bt_node
       - nav2_path_expiring_timer_condition
