--- a/src/navigation2_run/params/nav2_params_default.yaml
+++ b/src/navigation2_run/params/nav2_params_default.yaml
@@ -125,76 +125,52 @@ controller_server:
 
     # Controller parameters
     Fast:
-      plugin: "follow_path_controller::FollowPathController"
+      plugin: "custom_controller::CustomController"
       max_linear_vel: 1.1
       max_angular_vel: 12.0
-      min_linear_vel: 0.0
-      min_angular_vel: 0.0
-      max_linear_acc: 0.3
-      max_angular_acc: 1.0
       linear_kp: 2.2
       angular_kp: 3.7
-      yaw_goal_tolerance: 0.03         # 約 1.7 度
       transform_tolerance: 0.1
       look_ahead_distance: 0.2
       speed_decade: 0.125
-      costmap_tolerance: 95            # rival 是 98
+      costmap_tolerance: 95 # rival is 98
       keep_planning: false
-      spin_delay_threshold: 0.5
-
+      
     Slow:
-      plugin: "follow_path_controller::FollowPathController"
+      plugin: "custom_controller::CustomController"
       max_linear_vel: 0.8
       max_angular_vel: 2.0
-      min_linear_vel: 0.0
-      min_angular_vel: 0.0
-      max_linear_acc: 0.3
-      max_angular_acc: 1.0
       linear_kp: 2.2
       angular_kp: 3.7
-      yaw_goal_tolerance: 0.03
       transform_tolerance: 0.1
       look_ahead_distance: 0.2
       speed_decade: 0.125
-      costmap_tolerance: 95
+      costmap_tolerance: 95 # rival is 98
       keep_planning: false
-      spin_delay_threshold: 0.5
-
+    
     LinearBoost:
-      plugin: "follow_path_controller::FollowPathController"
+      plugin: "custom_controller::CustomController"
       max_linear_vel: 1.1
       max_angular_vel: 2.0
-      min_linear_vel: 0.0
-      min_angular_vel: 0.0
-      max_linear_acc: 0.3
-      max_angular_acc: 1.0
       linear_kp: 2.2
       angular_kp: 3.7
-      yaw_goal_tolerance: 0.03
       transform_tolerance: 0.1
       look_ahead_distance: 0.2
       speed_decade: 0.125
-      costmap_tolerance: 95
+      costmap_tolerance: 95 # rival is 98
       keep_planning: false
-      spin_delay_threshold: 0.5
 
     AngularBoost:
-      plugin: "follow_path_controller::FollowPathController"
+      plugin: "custom_controller::CustomController"
       max_linear_vel: 0.5
       max_angular_vel: 12.0
-      min_linear_vel: 0.0
-      min_angular_vel: 0.0
-      max_linear_acc: 0.3
-      max_angular_acc: 1.0
       linear_kp: 2.2
       angular_kp: 3.7
-      yaw_goal_tolerance: 0.03
       transform_tolerance: 0.1
       look_ahead_distance: 0.2
       speed_decade: 0.125
-      costmap_tolerance: 95
+      costmap_tolerance: 95 # rival is 98
       keep_planning: false
-      spin_delay_threshold: 0.5
 
 local_costmap:
   local_costmap:
