--- a/src/navigation2_run/params/nav2_params_default.yaml
+++ b/src/navigation2_run/params/nav2_params_default.yaml
@@ -16,6 +16,7 @@ bt_navigator:
     plugin_lib_names:
       - nav2_stop_controller_bt_node
       - nav2_reset_recovery_bt_node
+      - nav2_setup_updater_bt_node
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_compute_path_through_poses_action_bt_node
       - nav2_smooth_path_action_bt_node
